--- a/src/styles/NewIndex.module.css
+++ b/src/styles/NewIndex.module.css
@@ -150,10 +150,11 @@
 
 
 .animationEndHideChild {
-    bottom: 60;
-    left: 0;
+    bottom: 60px;
+    left: -350px;
     opacity: 0;
     position: absolute;
+    z-index: 10;
 
 
 
