--- a/src/styles/NewIndex.module.css
+++ b/src/styles/NewIndex.module.css
@@ -156,6 +156,72 @@
     position: absolute;
     z-index: 10;
 
+}
 
+
+.modelScaleUpAnimation {
+
+    animation-name: modelScaleUp;
+    animation-fill-mode: forwards;
+    animation-duration: 2s;
+    animation-timing-function: linear;
+}
+
+
+@keyframes modelScaleUp {
+
+    0% {
+        padding: 25px 25px 25px 25px;
+        width: 335px
+    }
+
+    25% {
+        padding: 25px 26px 25px 26px;
+        width: 350px
+    }
+
+    60% {
+        padding: 25px 28px 25px 28px;
+        width: 370px
+    }
+
+    100% {
+        padding: 25px 30px 25px 30px;
+        width: 390px
+    }
+
+}
+
+
+.modelScaleDownAnimation {
+
+    animation-name: modelScaleDown;
+    animation-fill-mode: forwards;
+    animation-duration: 2s;
+    animation-timing-function: linear;
+}
+
+
+@keyframes modelScaleDown {
+
+    0% {
+        padding: 25px 30px 25px 30px;
+        width: 390px
+    }
+
+    25% {
+        padding: 25px 28px 25px 28px;
+        width: 370px
+    }
+
+    60% {
+        padding: 25px 26px 25px 26px;
+        width: 350px
+    }
+
+    100% {
+        padding: 25px 25px 25px 25px;
+        width: 335px
+    }
 
 }
