concerege srtart page working

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -258,3 +258,13 @@ ol {
     transform: scale(1.5)
   }
 }
+
+
+
+/* .anmationEnd {
+
+  position: absolute;
+  bottom: 0px;
+  left: -220px;
+  opacity: 0;
+} */
