--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,6 +10,20 @@ a {
   text-decoration: none;
 }
 
+body {
+  font-family: Barlow sans-serif;
+  font-style: normal;
+  font-weight: 400
+}
+
+
+body {
+  padding: 0;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Barlow Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+
 @layer base {
   h1 {
     @apply text-4xl;
@@ -259,6 +273,23 @@ ol {
   }
 }
 
+
+/* width */
+::-webkit-scrollbar {
+  width: 1px;
+  height: 0.5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: gray;
+  border-radius: 10px;
+}
 
 
 /* .anmationEnd {
