--- a/src/styles/MenuComponent.module.css
+++ b/src/styles/MenuComponent.module.css
@@ -65,13 +65,47 @@
     background-repeat: no-repeat;
     background-position: center;
 
+    -webkit-transition: background-image 1s;
+    -moz-transition: background-image 1s;
+    -o-transition: background-image 1s;
+    transition: background-image 1s;
+
 }
+
+
 
 .aboutBackground {
 
     background-image: url(/images/about-bg.png);
     background-repeat: no-repeat;
     background-position: center;
+    -webkit-transition: background-image 1s;
+    -moz-transition: background-image 1s;
+    -o-transition: background-image 1s;
+    transition: background-image 1s;
+
+
+
+}
+
+
+
+.fadeAnimation {
+    animation: fadeAnimate 1s ease;
+}
+
+@keyframes fadeAnimate {
+
+
+    from {
+        opacity: 0;
+        transform: translateY(100px);
+    }
+
+    to {
+        opacity: 1;
+    }
+
 
 }
 
@@ -80,6 +114,10 @@
     background-image: url(/images/instructor-bg.png);
     background-repeat: no-repeat;
     background-position: center;
+    -webkit-transition: background-image 1s;
+    -moz-transition: background-image 1s;
+    -o-transition: background-image 1s;
+    transition: background-image 1s;
 
 }
 
@@ -89,5 +127,14 @@
     background-image: url(/images/blog-bg.png);
     background-repeat: no-repeat;
     background-position: center;
+    -webkit-transition: background-image 1s;
+    -moz-transition: background-image 1s;
+    -o-transition: background-image 1s;
+    transition: background-image 1s;
 
+}
+
+
+.hidescrollBar::-webkit-scrollbar {
+    display: none;
 }
