--- a/src/styles/NewIndex.module.css
+++ b/src/styles/NewIndex.module.css
@@ -1,7 +1,7 @@
 .parentchildon {
     animation-name: animateparenton;
     animation-fill-mode: forwards;
-    animation-duration: 2s;
+    animation-duration: 1s;
     animation-timing-function: linear;
 
 }
@@ -35,7 +35,7 @@
 .parentchildoff {
     animation-name: animateparentoff;
     animation-fill-mode: forwards;
-    animation-duration: 2.2s;
+    animation-duration: 1s;
     animation-timing-function: linear;
 
 }
@@ -109,7 +109,7 @@
 
     animation-name: animatechildon;
     animation-fill-mode: forwards;
-    animation-duration: 2s;
+    animation-duration: 1s;
     position: absolute;
     animation-timing-function: linear;
 
@@ -159,7 +159,7 @@
 
         animation-name: animatechildoff;
         animation-fill-mode: forwards;
-        animation-duration: 2s;
+        animation-duration: 1s;
         animation-timing-function: linear;
         position: absolute;
 
@@ -341,7 +341,7 @@ screen and (max-height: 700px) {
 
         animation-name: animatechildoff;
         animation-fill-mode: forwards;
-        animation-duration: 2s;
+        animation-duration: 1s;
         animation-timing-function: linear;
         position: absolute;
 
@@ -382,7 +382,7 @@ screen and (max-height: 700px) {
 
         animation-name: animatechildon;
         animation-fill-mode: forwards;
-        animation-duration: 2s;
+        animation-duration: 1s;
         position: absolute;
         animation-timing-function: linear;
 
@@ -436,7 +436,7 @@ screen and (max-height: 700px) {
 
     animation-name: modelScaleUp;
     animation-fill-mode: forwards;
-    animation-duration: 2s;
+    animation-duration: 1s;
     animation-timing-function: linear;
 }
 
@@ -470,7 +470,7 @@ screen and (max-height: 700px) {
 
     animation-name: modelScaleDown;
     animation-fill-mode: forwards;
-    animation-duration: 2s;
+    animation-duration: 1s;
     animation-timing-function: linear;
 }
 
@@ -497,4 +497,207 @@ screen and (max-height: 700px) {
         width: 335px
     }
 
+}
+
+
+/* card animation  */
+
+.imagecard img {
+    -webkit-transition: 1s ease;
+    transition: 1s ease;
+    overflow: hidden;
+}
+
+.cardAnimation:hover {
+
+    background: rgba(128, 128, 128, 0.164);
+    transition: background 2s ease;
+
+
+}
+
+
+.cardAnimation {
+
+    background: transparent;
+    transition: background 2s ease;
+}
+
+.cardAnimation:hover img {
+
+    animation: scaleUpImage 1s linear both;
+}
+
+@keyframes scaleUpImage {
+
+    from {
+        transform: scale(1.0);
+        transform: translateY(10px);
+
+    }
+
+    to {
+        transform: scale(1.2);
+
+    }
+}
+
+
+
+
+.cardAnimation img {
+
+    animation: scaleDownImage 1s linear both;
+}
+
+@keyframes scaleDownImage {
+
+    from {
+        transform: scale(1.2);
+
+    }
+
+    to {
+        transform: scale(1.0);
+        transform: translateY(10px);
+
+    }
+
+
+}
+
+.cardAnimation:hover h3 {
+
+    color: purple;
+    transition: color 1s ease-in;
+    animation: textanimateUp 1s linear;
+
+}
+
+@keyframes textanimateUp {
+    from {
+
+        transform: translateY(10px);
+        color: black;
+    }
+
+
+    from {
+
+
+        color: purple;
+
+    }
+}
+
+
+.hide {
+
+    display: none;
+}
+
+
+.cardAnimation:hover .hide {
+
+    color: purple;
+    transition: color 5s ease-in;
+    animation: animateText 1s linear both;
+    display: block;
+}
+
+@keyframes animateText {
+
+    from {
+        opacity: 0;
+        transform: translateY(10px);
+    }
+
+
+    to {
+        opacity: 1;
+        display: block;
+    }
+
+}
+
+
+
+.cardAnimation .hide {
+
+    color: purple;
+    transition: color 5s ease-in;
+    animation: animateTextHide 1s linear both;
+    display: block;
+}
+
+@keyframes animateTextHide {
+    from {
+        opacity: 1;
+        display: block;
+    }
+
+    to {
+        opacity: 0;
+        transform: translateY(10px);
+    }
+
+
+
+
+}
+
+.animatMenuLine>path:first-child {
+
+    animation: animateLine 1s infinite;
+
+    opacity: 1;
+
+    transition: opacity 1s ease;
+
+
+}
+
+
+@keyframes animateLine {
+
+
+    0% {
+        transform: scale(0.9);
+        -webkit-transform: scale(0.9);
+        transition: scale 1s ease;
+    }
+
+    100% {
+        transform: scale(1);
+        -webkit-transform: scale(1);
+        transition: scale 1s ease;
+    }
+}
+
+
+/* door open animation */
+
+
+.doorOPenAnimation:hover :nth-child(2) {
+
+
+    transform: rotateY(15deg);
+
+    /* animation: rotateImage 1s linear; */
+}
+
+
+@keyframes rotateImage {
+
+
+    from {
+
+        transform: rotate(0);
+    }
+
+
+    to {
+
+        transform: -rotateX(-60deg);
+    }
 }
