--- a/components/card/animatedDoor/Door.module.css
+++ b/components/card/animatedDoor/Door.module.css
@@ -32,9 +32,9 @@
 .rotateChild:hover h3 {
 
 
-    color: purple;
-    transition: color 1s ease-in;
-    animation: textanimateUp 1s ease-in-out;
+    color: #9747FF;
+    transition: all 1s ease-in-out;
+    animation: textanimateUp 1s ease-in-out forwards;
 }
 
 
@@ -46,10 +46,36 @@
     }
 
 
+    to {
+
+
+        color: #9747FF;
+
+    }
+}
+
+
+.rotateChild h3 {
+
+
+    color: black;
+    transition: all 1s ease-in-out;
+    animation: textanimateDown 1s ease-in-out forwards;
+}
+
+
+@keyframes textanimateDown {
     from {
 
 
-        color: purple;
+        color: #9747FF;
+    }
+
+
+    to {
+
+        transform: translateY(10px);
+        color: black;
 
     }
 }
@@ -63,7 +89,7 @@
 
 .rotateChild:hover .hide1 {
 
-    color: purple;
+    color: black;
     transition: color 5s ease-in;
     animation: animateText 1s linear both;
     display: block;
@@ -88,7 +114,7 @@
 
 .rotateChild .hide1 {
 
-    color: purple;
+    color: black;
     transition: color 5s ease-in;
     animation: animateTextHide 1s linear both;
     display: block;
