--- a/src/styles/NewIndex.module.css
+++ b/src/styles/NewIndex.module.css
@@ -571,6 +571,8 @@ screen and (max-height: 700px) {
     color: purple;
     transition: color 1s ease-in;
     animation: textanimateUp 1s ease-in-out forwards;
+    font-style: normal;
+    font-weight: 500;
 
 }
 
@@ -598,6 +600,8 @@ screen and (max-height: 700px) {
     color: black;
     transition: all 1s ease-in-out;
     animation: textanimateDown 1s ease-in-out forwards;
+    font-style: normal;
+    font-weight: 500;
 
 }
 
