--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,24 +21,34 @@ body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Barlow Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+
 }
 
 
 @layer base {
   h1 {
     @apply text-4xl;
+    font-style: normal;
+    font-weight: 500;
+
   }
 
   h2 {
     @apply text-3xl;
+    font-style: normal;
+    font-weight: 500;
   }
 
   h3 {
     @apply text-2xl;
+    font-style: normal;
+    font-weight: 400;
   }
 
   h4 {
     @apply text-xl;
+    font-style: normal;
+    font-weight: 400;
   }
 
   ul {
@@ -47,6 +57,13 @@ body {
 
   ol {
     @apply list-decimal;
+  }
+
+
+  p {
+
+    font-style: normal;
+    font-weight: 400;
   }
 }
 
@@ -128,6 +145,8 @@ body {
 
 .zoom-effect-container:hover h3 {
   color: purple;
+  font-style: normal;
+  font-weight: 500;
 }
 
 /* .zoom {
