--- a/src/styles/CoursePage.module.css
+++ b/src/styles/CoursePage.module.css
@@ -1,14 +1,14 @@
 .cardBackground {
 
     background-color: rgba(128, 128, 128, 0.164);
-    color: #9747FF;
+    /* color: #9747FF; */
 }
 
 
 .cardBackgroundHover:hover {
 
     background-color: rgba(128, 128, 128, 0.164);
-    color: #9747FF;
+    /* color: #9747FF; */
     cursor: pointer;
     z-index: 100;
     transition: all ease-in-out 1s;
