--- a/components/TeacherLounge/TeacherLounge.module.css
+++ b/components/TeacherLounge/TeacherLounge.module.css
@@ -18,6 +18,7 @@
         bottom: 0;
         right: 0;
         opacity: 0;
+        width: 350px;
     }
 
 
@@ -27,6 +28,7 @@
         right: 50%;
 
         opacity: 1;
+        width: 400px;
     }
 }
 
@@ -36,6 +38,8 @@
     animation: ModelClose 500ms linear forwards;
     transition: all ease-in-out 500ms;
     position: absolute;
+    z-index: 0;
+
 
 
 }
@@ -49,8 +53,10 @@
 
         bottom: 30%;
         right: 50%;
-
+        visibility: visible;
         opacity: 1;
+        width: 400px;
+
 
 
     }
@@ -58,10 +64,15 @@
 
 
     100% {
-        bottom: 0;
-        right: 0;
+        bottom: 0px;
+        right: 0px;
         opacity: 0;
+        visibility: hidden;
+        transform: none;
+        width: 350px;
     }
+
+
 
 
 
@@ -80,8 +91,49 @@
     transition: 1s ease-in-out;
 }
 
+/* i wanna tech css  */
 
-.hide {
+.iwannatech {
+    background-image: url(/images/iwanna1.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    transition: all ease-in-out 500ms;
+    -webkit-transition: all ease-in-out 500ms;
+}
 
-    display: none;
+.iwannatech:hover {
+    background-image: url(/images/iwanna2.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    transition: all ease-in-out 500ms;
+    -webkit-transition: all ease-in-out 500ms;
+}
+
+
+/* animation for element hide after transformation */
+
+
+
+.hidediveAfterTransform {
+
+    animation: elementTransform ease-in-out 500ms forwards;
+    -webkit-animation: elementTransform ease-in-out 500ms forwards;
+}
+
+
+
+@keyframes elementTransform {
+
+    from {
+        transform: none;
+        opacity: 1;
+
+    }
+
+    to {
+
+        transform: translateY(500px);
+        transform: translateX(-0px);
+        opacity: 0;
+    }
 }
