--- a/components/TeacherLounge/TeacherLounge.module.css
+++ b/components/TeacherLounge/TeacherLounge.module.css
@@ -33,6 +33,51 @@
 }
 
 
+/* media query */
+
+
+@media screen and (max-height: 500px),
+screen and (max-height: 700px) {
+
+
+    .openModel {
+
+        animation: ModelOpen 500ms ease forwards;
+        transition: all ease-in-out 1s;
+        display: block;
+        position: absolute;
+
+
+    }
+
+
+
+    @keyframes ModelOpen {
+
+
+        0% {
+
+            bottom: 0;
+            right: 0;
+            opacity: 0;
+            width: 350px;
+        }
+
+
+        100% {
+
+            bottom: 15%;
+            right: 50%;
+
+            opacity: 1;
+            width: 400px;
+        }
+    }
+
+
+}
+
+
 .closeModel {
 
     animation: ModelClose 500ms linear forwards;
