--- a/components/TeacherLounge/TeacherLounge.module.css
+++ b/components/TeacherLounge/TeacherLounge.module.css
@@ -108,15 +108,26 @@ screen and (max-height: 700px) {
 
 
 
-    100% {
+    99% {
         bottom: 0px;
         right: 0px;
         opacity: 0;
         visibility: hidden;
         transform: none;
         width: 350px;
+
     }
 
+    100% {
+        bottom: 0px;
+        right: 0px;
+        opacity: 0;
+        visibility: hidden;
+        transform: none;
+        width: 0px;
+        height: 0;
+
+    }
 
 
 
